production/modules/observatory/files/rules.v4
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p gre -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -p gre -j ACCEPT
-A FORWARD -d 192.168.10.0/32 -i lo -j ACCEPT
-A FORWARD -i tun0 -o eth0 -j ACCEPT
-A FORWARD -i tun0 -o eth0 -j ACCEPT
-A OUTPUT -o tun+ -j ACCEPT
-A OUTPUT -p gre -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
